# openBook

./: .env.example  .gitignore  README.md  docker-compose.yml  next.config.ts  npm  package-lock.json  package.json
messages/: .sync-state.json  ar.json  de.json  en.json  es.json  fr.json  he.json  pt.json  zh.json
prisma/: schema.prisma
public/: ads.txt
scripts/: db-setup.sh  sync-locale-messages.mjs  write-locale-messages.mjs
src/: auth.config.ts  auth.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: admin-delete-book-form.tsx  adsense-unit.tsx  auto-book-wizard.tsx  book-download-count.tsx  book-download-menu.tsx  book-draft-form.tsx  book-lang-switcher.tsx  book-languages-manager.tsx  book-localized-title-editor.tsx  book-primary-language-select.tsx  chapter-ai-draft-panel.tsx  chapter-draft-form.tsx  chapter-navigation.tsx  chapter-translate-body-panel.tsx  contents-order-panel.tsx  delete-draft-book-form.tsx  delete-draft-book-from-list.tsx  diff-view.tsx  draft-delete-form.tsx  draft-publish-form.tsx  drafts-table.tsx  edit-pencil-link.tsx  figure-name-field.tsx  google-sign-in-button.tsx  header-menu-details.tsx  import-book-draft-form.tsx  (+14 more)
tools/openbook-bookbuilder/: README.md  pyproject.toml
tools/openbook-bookbuilder/openbook_bookbuilder/: __init__.py  app.py  book_context.py  cli.py  constants.py  llm_prompts.py  ollama_client.py  slugify.py  toc_parse.py
tools/openbook-bookbuilder/openbook_bookbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+163 files in other folders)
