[project]
name = "openbook-bookbuilder"
version = "0.1.0"
description = "Local Streamlit GUI to draft books with Ollama for openBook import"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.0",
  "streamlit>=1.39",
]

[project.scripts]
openbook-bookbuilder = "openbook_bookbuilder.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openbook_bookbuilder*"]
